<resources>
    <string name="app_name">Example Project</string>
    <string name="splash_title">Welcome To Monumental habits</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="onboarding_1_title">WELCOME TO Monumental habits</string>
    <string name="onboarding_2_title">CREATE NEW HABIT EASILY</string>
    <string name="onboarding_3_title">KEEP TRACK OF YOUR PROGRESS</string>
    <string name="onboarding_4_title">JOIN A SUPPORTIVE COMMUNITY</string>
    <string name="onboarding_1_sub_title">We can help you to be a better version of yourself.</string>
    <string name="onboarding_2_sub_title">We can help you to be a better version of yourself.</string>
    <string name="onboarding_3_sub_title">We can help you to be a better version of yourself.</string>
    <string name="onboarding_4_sub_title">We can help you to be a better version of yourself.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>