<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignInActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sign_in_gradient"
        app:layout_constraintBottom_toBottomOf="@id/welcomeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFF3E9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="42dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/klasik_regular"
        android:text="@string/splash_title"
        android:textAlignment="center"
        android:textColor="@color/eclipse"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogle"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/continue_with_google"
        android:textColor="@color/eclipse"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/buttonFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFacebook"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/eclipse"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/loginSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_section_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loginSectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/log_in_with_email"
            android:textColor="@color/eclipse"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="14dp"
            android:hint="@string/email"
            android:textColorHint="@color/morning"
            app:boxBackgroundColor="#FFF6ED"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginSectionTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="20dp"
                android:drawableTint="@color/morning"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_fields_bg"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="30dp"
            android:drawableTint="@color/morning"
            android:fontFamily="@font/manrope_bold"
            android:hint="@string/password"
            android:paddingHorizontal="17dp"
            android:textColor="@color/morning"
            android:textColorHint="@color/morning"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/buttonShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/manrope_medium"
            android:text="Show"
            android:textColor="@color/eclipse"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toTopOf="@id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/morning"
            android:text="@string/login"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/eclipse"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

        <TextView
            android:id="@+id/signUpHelperText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/eclipse"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>